micro-services/deployment/istio/plain_vanila/budget-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: budget-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: budget
  template:
    metadata:
      labels:
        app: budget
    spec:
      containers:
      - name: budget
        image: gcr.io/neeraj-arena/budget
        ports:
        - containerPort: 80

---
kind: Service
apiVersion: v1
metadata:
  name: budget
spec:
  selector:
    app: budget
  ports:
  - protocol: TCP
    port: 80
  type: ClusterIP
