micro-services/deployment/istio/plain_vanila/revenues-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: revenues-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: revenues
  template:
    metadata:
      labels:
        app: revenues
    spec:
      containers:
      - name: revenues
        image: gcr.io/neeraj-arena/revenues
        ports:
        - containerPort: 80

---
kind: Service
apiVersion: v1
metadata:
  name: revenues
spec:
  selector:
    app: revenues
  ports:
  - protocol: TCP
    port: 80
  type: ClusterIP
