micro-services/deployment/istio/plain_vanila/ingress-deployment.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: movies-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: http
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: movie-details
spec:
  hosts:
  - "*"
  gateways:
  - movies-gateway
  http:
  - match:
    - uri:
        exact: /movie-details
    route:
    - destination:
        host: movie-details
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: movies
spec:
  hosts:
  - "*"
  gateways:
  - movies-gateway
  http:
  - match:
    - uri:
        exact: /movies
    route:
    - destination:
        host: movies
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: predictions
spec:
  hosts:
  - "*"
  gateways:
  - movies-gateway
  http:
  - match:
    - uri:
        exact: /predictions
    route:
    - destination:
        host: predictions
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - "*"
  gateways:
  - movies-gateway
  http:
  - match:
    - uri:
        exact: /ratings
    route:
    - destination:
        host: ratings
        port:
          number: 80
